--- a/DiplomaThesis/ctx-thesis-v20230801/diplomova-praca-xlysova.tex
+++ b/DiplomaThesis/ctx-thesis-v20230801/diplomova-praca-xlysova.tex
@@ -558,11 +558,23 @@ stavebné řízení - obec povoluje schvalovanie stavieb, ale obec môže byť d
 \stopitemize
 
 \pkap{Model požiadaviek}
+Na základe analýzy vznikol model požiadaviek (\in{viď obrázok}[obr:f-req]).
+
+\obrazekB{obr:f-req}
+{Model požiadaviek (vlastné spracovanie na základe informácií z interných dokumentov firmy Asseco a analýzy)}{images/f_req.png}{width=30cc}
 
 \TODO
 TODO
 
 \pkap{Use case model}
+Na nasledujúcich obrázkoch možno vidieť model prípadov užitia.
+
+\obrazekB{obr:uc1}
+{Use case model zo strany správcu (vlastné spracovanie na základe informácií z interných dokumentov firmy Asseco)}{images/UC Správca.png}{width=30cc}
+
+\obrazekB{obr:uc2}
+{Use case model zo strany zamestnávateľa (vlastné spracovanie na základe informácií z interných dokumentov firmy Asseco)}{images/UC Zamestnávateľ.png}{width=30cc}
+
 
 \TODO
 TODO
