LDM, KDM almost done

--- a/DiplomaThesis/ctx-thesis-v20230801/diplomova-praca-xlysova.tex
+++ b/DiplomaThesis/ctx-thesis-v20230801/diplomova-praca-xlysova.tex
@@ -609,13 +609,16 @@ TODO
 
 \pkap{Konceptuálny dátový model}
 
-\TODO
+\TODO 
 TODO
 
 \pkap{Logický dátový model pre SAMO}
 
-\TODO
-TODO
+\obrazekB{obr:ldm-sluzby}
+{Logický dátový model - služby a katalóg služieb (vlastné spracovanie)}{images/ldm-sluzby.png}{width=32cc}
+
+\obrazekB{obr:ldm-zam}
+{Logický dátový model - zamestnávatelia a zamestnanci (vlastné spracovanie)}{images/ldm-zam.png}{width=32cc}
 
 \pkap{Výber služby, ktorá bude implementovaná}
 \pkap{Charakteristika vybraných služieb verejnej správy}
